--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="cache-control" content="no-cache" />
   <meta http-equiv="expires" content="0" />
   <meta http-equiv="pragma" content="no-cache" />
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
   <meta name="description"
     content="Wei-Hao Chen, a fourth-year Ph.D. student in Computer Science at Purdue University, focuses on Human-AI Interaction, Software Engineering, and Artificial Intelligence in the Human-Centered Software Systems Lab. With experience at Realtek Semiconductor and a background in Cryptography, he develops tools for data science. Enjoys travel, gaming, and cats.">
   <meta name="keywords"
