--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
               <p class="text-sm mb-2"><strong>Wei-Hao Chen</strong>, Weixi Tong, Amanda Case, Tianyi Zhang.</p>
               <p class="text-sm italic mb-2">ACM Conference on Human Factors in Computing Systems (CHI), 2025</p>
               <div class="flex items-center justify-between">
-                <div class="flex space-x-4">
-                  <a href="Dango.pdf"
-                    class="text-sm text-sky-600 hover:text-sky-800 bg-gray-50 px-3 py-0.5 rounded-md flex items-center">
-                    <i class="fa-solid fa-file-pdf"></i><span class="ml-1">paper (coming soon)</span>
+                <div class="flex space-x-2">
+                  <a href="dango.pdf"
+                    class="text-sm text-gray-500 hover:text-gray-800 bg-gray-50 px-3 py-0.5 rounded-md flex items-center">
+                    <i class="fa-solid fa-file-pdf"></i><span class="ml-1 ">paper</span>
                   </a>
                 </div>
                 <div class="flex flex-wrap items-center gap-2">
@@ -162,12 +162,18 @@
               <p class="text-sm italic inline-block mr-2">ACM Symposium on User Interface Software and Technology
                 (UIST), 2023</p>
               <div class="flex items-center justify-between">
-                <div class="flex space-x-4">
+                <div class="flex space-x-2">
                   <a href="MIWA.pdf"
-                    class="text-sm text-sky-600 hover:text-sky-800 bg-gray-50 px-3 py-0.5 rounded-md flex items-center">
+                    class="text-sm text-gray-500 hover:text-gray-800 bg-gray-50 px-3 py-0.5 rounded-md flex items-center">
                     <i class="fa-solid fa-file-pdf"></i><span class="ml-1">paper</span>
                   </a>
+                  <a href="https://github.com/ferranschen/MIWA"
+                    class="text-sm text-gray-500 hover:text-gray-800 bg-gray-50 px-3 py-0.5 rounded-md flex items-center">
+                    <i class="fa-solid fa-code"></i><span class="ml-1">code</span>
+                  </a>
+
                 </div>
+
                 <div class="flex flex-wrap items-center gap-2">
                   <div class="flex items-center">
                     <span class="text-sky-600/70 mr-1">●</span>
@@ -197,9 +203,9 @@
               <p class="text-sm mb-2"><strong>Wei-Hao Chen</strong>, Chun-I Fan, Yi-Fan Tseng</p>
               <p class="text-sm italic mb-2">arXiv preprint arXiv:2410.08120</p>
               <div class="flex items-center justify-between">
-                <div class="flex space-x-4">
+                <div class="flex space-x-2">
                   <a href="https://arxiv.org/abs/2410.08120"
-                    class="text-sm text-sky-600 hover:text-sky-800 bg-gray-50 px-3 py-0.5 rounded-md flex items-center">
+                    class="text-sm text-gray-500 hover:text-gray-800 bg-gray-50 px-3 py-0.5 rounded-md flex items-center">
                     <i class="fa-solid fa-file-pdf"></i><span class="ml-1">paper</span>
                   </a>
                 </div>
@@ -249,9 +255,9 @@
               <p class="text-sm mb-2"><strong>Wei-Hao Chen</strong>, Chun-I Fan, Yi-Fan Tseng</p>
               <p class="text-sm italic mb-2">IEEE Conference on Dependable and Secure Computing (DSC), 2018</p>
               <div class="flex items-center justify-between">
-                <div class="flex space-x-4">
+                <div class="flex space-x-2">
                   <a href="EFF.pdf"
-                    class="text-sm text-sky-600 hover:text-sky-800 bg-gray-50 px-3 py-0.5 rounded-md flex items-center">
+                    class="text-sm text-gray-500 hover:text-gray-800 bg-gray-50 px-3 py-0.5 rounded-md flex items-center">
                     <i class="fa-solid fa-file-pdf"></i><span class="ml-1">paper</span>
                   </a>
                 </div>
@@ -283,6 +289,10 @@
           <div class="text-sm font-medium text-gray-500 w-24 flex-shrink-0">Jan 2025</div>
           <div class="flex-1 text-sm">My paper - Dango: A Mixed-Initiative Data Wrangling System using Large Language
             Model is accepted by CHI 2025 🎉. See you in Yokohama 🌸!</div>
+        </div>
+        <div class="flex items-start">
+          <div class="text-sm font-medium text-gray-500 w-24 flex-shrink-0">Jan 2025</div>
+          <div class="flex-1 text-sm">I am Graduate TA for CS 373: Data Mining at Purdue University.</div>
         </div>
         <div class="flex items-start">
           <div class="text-sm font-medium text-gray-500 w-24 flex-shrink-0">Mar 2024</div>
