--- a/index.html
+++ b/index.html
@@ -41,18 +41,19 @@
         </div>
         <!-- Desktop menu -->
         <div class="hidden md:flex space-x-8">
-          <a href="#about" class="inline-flex items-center px-1 pt-1 text-sm hover:text-sky-600">about</a>
-          <a href="#publication" class="inline-flex items-center px-1 pt-1 text-sm hover:text-sky-600">publications</a>
-          <a href="#news" class="inline-flex items-center px-1 pt-1 text-sm hover:text-sky-600">news</a>
+          <a href="#about" class="inline-flex items-center px-1 pt-1 text-sm hover:text-sky-600 font-mono">about</a>
+          <a href="#publication"
+            class="inline-flex items-center px-1 pt-1 text-sm hover:text-sky-600 font-mono">publications</a>
+          <a href="#news" class="inline-flex items-center px-1 pt-1 text-sm hover:text-sky-600 font-mono">news</a>
         </div>
       </div>
     </div>
     <!-- Mobile menu -->
     <div id="mobileMenu" class="hidden md:hidden">
       <div class="px-2 pt-2 pb-3 space-y-1">
-        <a href="#about" class="block px-3 py-2 text-sm hover:text-sky-600">about</a>
-        <a href="#publication" class="block px-3 py-2 text-sm hover:text-sky-600">publications</a>
-        <a href="#news" class="block px-3 py-2 text-sm hover:text-sky-600">news</a>
+        <a href="#about" class="block px-3 py-2 text-sm hover:text-sky-600 font-mono">about</a>
+        <a href="#publication" class="block px-3 py-2 text-sm hover:text-sky-600 font-mono">publications</a>
+        <a href="#news" class="block px-3 py-2 text-sm hover:text-sky-600 font-mono">news</a>
       </div>
     </div>
   </nav>
@@ -112,7 +113,50 @@
         <div class="w-2 h-10 bg-sky-600"></div>
         <h1 class="text-4xl font-semibold">Publications 📚 <span class="sleeping-z text-2xl">💤</span></h1>
       </div>
-      <div class="space-y-4 mt-4">
+
+      <!-- Loading placeholder -->
+      <div id="publicationLoading" class="space-y-4 mt-4">
+        <div class="publication bg-white rounded-lg border border-gray-200 p-6">
+          <div class="grid grid-cols-12 gap-4">
+            <div class="col-span-3">
+              <div class="w-full h-32 rounded-lg bg-gray-200 animate-pulse"></div>
+            </div>
+            <div class="col-span-9">
+              <div class="h-6 bg-gray-200 rounded animate-pulse mb-3 w-3/4"></div>
+              <div class="h-4 bg-gray-200 rounded animate-pulse mb-2 w-1/2"></div>
+              <div class="h-4 bg-gray-200 rounded animate-pulse mb-4 w-1/3"></div>
+              <div class="flex justify-between">
+                <div class="h-6 bg-gray-200 rounded animate-pulse w-24"></div>
+                <div class="flex space-x-2">
+                  <div class="h-6 bg-gray-200 rounded animate-pulse w-16"></div>
+                  <div class="h-6 bg-gray-200 rounded animate-pulse w-16"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="publication bg-white rounded-lg border border-gray-200 p-6">
+          <div class="grid grid-cols-12 gap-4">
+            <div class="col-span-3">
+              <div class="w-full h-32 rounded-lg bg-gray-200 animate-pulse"></div>
+            </div>
+            <div class="col-span-9">
+              <div class="h-6 bg-gray-200 rounded animate-pulse mb-3 w-4/5"></div>
+              <div class="h-4 bg-gray-200 rounded animate-pulse mb-2 w-2/3"></div>
+              <div class="h-4 bg-gray-200 rounded animate-pulse mb-4 w-1/4"></div>
+              <div class="flex justify-between">
+                <div class="h-6 bg-gray-200 rounded animate-pulse w-24"></div>
+                <div class="flex space-x-2">
+                  <div class="h-6 bg-gray-200 rounded animate-pulse w-16"></div>
+                  <div class="h-6 bg-gray-200 rounded animate-pulse w-16"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div id="publicationContent" class="space-y-4 mt-4 hidden">
         <div class="publication bg-white rounded-lg border border-gray-200 p-6 transition-transform hover:scale-[1.02]">
           <div class="grid grid-cols-12 gap-4">
             <div class="col-span-3">
@@ -338,6 +382,14 @@
       const menu = document.getElementById('mobileMenu');
       menu.classList.toggle('hidden');
     }
+
+    // Show publication content and hide loading placeholder after a delay
+    window.addEventListener('load', function () {
+      setTimeout(function () {
+        document.getElementById('publicationLoading').classList.add('hidden');
+        document.getElementById('publicationContent').classList.remove('hidden');
+      }, 1500); // 1.5 seconds delay
+    });
   </script>
 
   <!-- Add this CSS to your existing styles -->
