--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
               <div class="flex items-center justify-between">
                 <div class="flex space-x-2">
                   <a href="dango.pdf"
-                    class="text-sm text-gray-500 hover:text-gray-800 bg-gray-50 px-3 py-0.5 rounded-md flex items-center">
+                    class="text-xs text-gray-500 hover:text-gray-800 bg-gray-50 px-3 py-0.5 rounded-sm flex items-center">
                     <i class="fa-solid fa-file-pdf"></i><span class="ml-1 ">paper</span>
                   </a>
                 </div>
@@ -205,14 +205,14 @@
                 Huang, Rui Dong, Xinyu Wang, Tianyi Zhang</p>
               <p class="text-sm italic inline-block mr-2">ACM Symposium on User Interface Software and Technology
                 (UIST), 2023</p>
-              <div class="flex items-center justify-between">
+              <div class="flex items-center justify-between mt-2">
                 <div class="flex space-x-2">
                   <a href="MIWA.pdf"
-                    class="text-sm text-gray-500 hover:text-gray-800 bg-gray-50 px-3 py-0.5 rounded-md flex items-center">
+                    class="text-xs text-gray-500 hover:text-gray-800 bg-gray-50 px-3 py-0.5 rounded-sm flex items-center">
                     <i class="fa-solid fa-file-pdf"></i><span class="ml-1">paper</span>
                   </a>
                   <a href="https://github.com/ferranschen/MIWA"
-                    class="text-sm text-gray-500 hover:text-gray-800 bg-gray-50 px-3 py-0.5 rounded-md flex items-center">
+                    class="text-xs text-gray-500 hover:text-gray-800 bg-gray-50 px-3 py-0.5 rounded-sm flex items-center">
                     <i class="fa-solid fa-code"></i><span class="ml-1">code</span>
                   </a>
 
@@ -249,7 +249,7 @@
               <div class="flex items-center justify-between">
                 <div class="flex space-x-2">
                   <a href="https://arxiv.org/abs/2410.08120"
-                    class="text-sm text-gray-500 hover:text-gray-800 bg-gray-50 px-3 py-0.5 rounded-md flex items-center">
+                    class="text-xs text-gray-500 hover:text-gray-800 bg-gray-50 px-3 py-0.5 rounded-sm flex items-center">
                     <i class="fa-solid fa-file-pdf"></i><span class="ml-1">paper</span>
                   </a>
                 </div>
@@ -301,7 +301,7 @@
               <div class="flex items-center justify-between">
                 <div class="flex space-x-2">
                   <a href="EFF.pdf"
-                    class="text-sm text-gray-500 hover:text-gray-800 bg-gray-50 px-3 py-0.5 rounded-md flex items-center">
+                    class="text-xs text-gray-500 hover:text-gray-800 bg-gray-50 px-3 py-0.5 rounded-sm flex items-center">
                     <i class="fa-solid fa-file-pdf"></i><span class="ml-1">paper</span>
                   </a>
                 </div>
