--- a/index.html
+++ b/index.html
@@ -92,6 +92,11 @@
         <div class="md:col-span-1">
           <img src="pic.jpg" alt="Wei-Hao Chen" class="rounded-lg w-full shadow-md" />
           <div class="mt-4 space-y-2">
+            <!-- add CS PhD student @ Purdue University -->
+
+            <p class="text-sm bg-gradient-to-r from-purple-600 to-blue-500 text-transparent bg-clip-text font-bold">
+              <i class="fa-solid fa-graduation-cap"></i> CS PhD student @ Purdue
+            </p>
             <a href="mailto:chen4129@purdue.edu" class="flex items-center text-sm hover:text-sky-600">
               <i class="fa-solid fa-envelope w-5 text-yellow-500"></i><span>chen4129@purdue.edu</span>
             </a>
